# ParticleSimulationSystem

./: .gitignore  .pdm-python  CI Projects.code-workspace  CustomTextures.inc  Linux_Animation.ini  Linux_no_Animation.ini  NB_no_animation_UHD.ini  NewBegining.pov  NewBegining.pov.bak  ParticleGen.py  Render.py  cluster.conf  makeMP4.py  pyproject.toml  requirements.txt
inc/: cluster.py  particles.py
output/: NB_debug.txt  NB_render.txt  NB_stats.txt  NB_warning.txt
scenes/: CustomTextures.inc  NB_animation_UHD.ini  NewBegining.pov
sql/: install.sql
src/: __init__.py  generator.py  insert_preset.py  make_mp4.py  render.py
src/lib/: pov_builder.py
src/povray_render/: ParticleGen.py  Render.py  cluster.py  makeMP4.py  particles.py
src/sim/: particles.py  validator.py
src/storage/: cluster.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_particle_simulation.py  test_physics_accuracy.py  test_render_integration.py  test_render_pipeline.py
tests/unit/: test_cluster.py  test_generator.py  test_insert_presets.py  test_make_mp4.py  test_particlegen.py  test_render.py  test_render_unit.py
tests/unit/sim/: test_particles.py  test_validator.py
tests/unit/storage/: test_cluster.py
