[project]
name = "povray-render-system"
version = "0.1.0"
description = "Distributed POV-Ray rendering pipeline with CollectiveCore"
authors = [{name = "AdmiralMorketh"}]
dependencies = [
    "collective-cores @ git+ssh://git@CollectiveCore/CollectiveIndustries/CollectiveCore.git@v0.2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "psutil>=5.9",
    "platformdirs>=4.0",    # optional
]
requires-python = ">=3.11"

[project.scripts]
render-node = "povray_render.render:main"
generate-particles = "povray_render.particle_gen:main"
make-mp4 = "povray_render.make_mp4:main"

[tool.pdm]
distribution = true
package-dir = "src"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"